<resources>
    <string name="app_name">MVPAndroidTalks</string>
    <string name="no_data">No data</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="add_note">Add note</string>
    <string name="empty_error">Cannot be empty!</string>
    <string name="success_added_note">Success added note!</string>
    <string name="notes">Notes</string>
    <string name="type">Type</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note_message">Do you want to delete this note?</string>
</resources>
